<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.springdoc</groupId>
	<artifactId>springdoc-openapi</artifactId>
	<version>3.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Spring openapi documentation</name>
	<description>Spring openapi documentation</description>
	<url>https://springdoc.org/</url>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.3</version>
	</parent>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Badr NASS LAHSEN</name>
			<email>support@springdoc.org</email>
			<organization>springdoc</organization>
			<organizationUrl>https://springdoc.org/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>git@github.com:springdoc/springdoc-openapi.git</url>
		<connection>scm:git:git@github.com:springdoc/springdoc-openapi.git</connection>
		<developerConnection>scm:git:git@github.com:springdoc/springdoc-openapi.git
		</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<modules>
		<module>springdoc-openapi-starter-common</module>
		<module>springdoc-openapi-starter-webmvc-api</module>
		<module>springdoc-openapi-starter-webflux-api</module>
		<module>springdoc-openapi-starter-webmvc-ui</module>
		<module>springdoc-openapi-starter-webflux-ui</module>
		<module>springdoc-openapi-starter-webmvc-scalar</module>
		<module>springdoc-openapi-starter-webflux-scalar</module>
		<module>springdoc-openapi-bom</module>
	</modules>

	<properties>
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
		<central-publishing-maven-plugin.version>0.7.0
		</central-publishing-maven-plugin.version>
		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
		<swagger-api.version>2.2.43</swagger-api.version>
		<swagger-ui.version>5.32.0</swagger-ui.version>
		<gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
		<jjwt.version>0.9.1</jjwt.version>
		<therapi-runtime-javadoc.version>0.15.0</therapi-runtime-javadoc.version>
		<spring-cloud-function.version>5.0.0-M1</spring-cloud-function.version>
		<spring-security-oauth2-authorization-server.version>2.0.0-M2
		</spring-security-oauth2-authorization-server.version>
		<scalar.version>0.5.55</scalar.version>
		<skipPublishing>false</skipPublishing>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- swagger dependencies -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-core-jakarta</artifactId>
				<version>${swagger-api.version}</version>
			</dependency>
			<!-- swagger ui -->
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>swagger-ui</artifactId>
				<version>${swagger-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<!-- spring Cloud Function-->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-function-dependencies</artifactId>
				<version>${spring-cloud-function.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- spring Security Oauth2 Authorization Server-->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-authorization-server</artifactId>
				<version>${spring-security-oauth2-authorization-server.version}</version>
			</dependency>
			<dependency>
				<groupId>com.scalar.maven</groupId>
				<artifactId>scalar</artifactId>
				<version>${scalar.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.therapi</groupId>
				<artifactId>therapi-runtime-javadoc</artifactId>
				<version>${therapi-runtime-javadoc.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.therapi</groupId>
				<artifactId>therapi-runtime-javadoc-scribe</artifactId>
				<version>${therapi-runtime-javadoc.version}</version>
			</dependency>
			<dependency>
				<groupId>com.scalar.maven</groupId>
				<artifactId>scalar-core</artifactId>
				<version>${scalar.version}</version>
			</dependency>
			<dependency>
				<groupId>com.scalar.maven</groupId>
				<artifactId>scalar-webmvc</artifactId>
				<version>${scalar.version}</version>
			</dependency>
			<dependency>
				<groupId>com.scalar.maven</groupId>
				<artifactId>scalar-webflux</artifactId>
				<version>${scalar.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes/META-INF
							</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/..</directory>
									<includes>
										<include>LICENSE</include>
										<include>COPYRIGHT</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ci</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>springdoc-openapi-starter-common</module>
				<module>springdoc-openapi-starter-webmvc-api</module>
				<module>springdoc-openapi-starter-webflux-api</module>
				<module>springdoc-openapi-starter-webmvc-ui</module>
				<module>springdoc-openapi-starter-webflux-ui</module>
				<module>springdoc-openapi-tests</module>
			</modules>
		</profile>
		<profile>
			<id>gpg</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<sourcepath>src/main/java</sourcepath>
							<source>17</source>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>${central-publishing-maven-plugin.version}</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
							<waitUntil>published</waitUntil>
							<skipPublishing>${skipPublishing}</skipPublishing>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-release-plugin</artifactId>
						<version>${maven-release-plugin.version}</version>
						<configuration>
							<tagNameFormat>v@{project.version}</tagNameFormat>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>gpg</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>central</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>central</id>
			<url>https://central.sonatype.com/</url>
		</repository>
	</distributionManagement>
</project>
